# credit-risk-pd

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.triton.yml  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
configs/: config.yaml
configs/experiment/: default.yaml
configs/preprocess/: default.yaml
configs/train/: default.yaml
mlruns/0/: meta.yaml
mlruns/116437726781108595/: meta.yaml
mlruns/116437726781108595/ba85e9c34b974dfda139cdd99ae872cd/: meta.yaml
mlruns/177138344496812646/: meta.yaml
mlruns/177138344496812646/63be600c38c74db4a7557e55a020f81e/: meta.yaml
mlruns/177138344496812646/7073d6772f4043f09b6198a25be5dfd8/: meta.yaml
mlruns/177138344496812646/d5d1096207464a05aa38e593d801a89d/: meta.yaml
mlruns/727912868003770356/: meta.yaml
mlruns/727912868003770356/2347298baa9346c4bf7f2a3922499e7a/: meta.yaml
models/baseline_lr_model/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
src/: __init__.py  predict.py
src/credit_risk/: __init__.py  cli.py
src/data/: __init__.py  download.py  preprocessing.py
src/features/: __init__.py
src/hydra/: main.py
src/models/: __init__.py  baseline_lr.py  test_onnx_stack.py  train_cat.py  train_stack.py  train_tabresnet.py
src/tuning/: optuna_runner.py
src/utils/: __init__.py
tests/: test_baseline_lr.py  test_catboost.py  test_stack.py
(+31 files in other folders)
